# Gambit-Core

./: CMakeLists.txt  README.md  WALLET_IMPLEMENTATION.md  build.bat  build_tests.bat  clean.bat  gui_cli_integration_de6a3b59.plan.md  install_deps.bat  install_msvc_cl.bat  run_tests.bat  setup_gambit_env.bat  test_rpc.json  wallet.json  whitepaper.md
app/: CMakeLists.txt  main.cpp
gui/: CMakeLists.txt  gambit_gui.hpp  main_gui.cpp  rpc_client.hpp
gui/ui/: main.slint
include/gambit/: account.hpp  address.hpp  block.hpp  block_info.hpp  blockchain.hpp  bloom.hpp  dns_seed.hpp  genesis.hpp  hash.hpp  keys.hpp  log.hpp  miner.hpp  mining_engine.hpp  mpt.hpp  node.hpp  p2p_message.hpp  p2p_node.hpp  p2p_peer.hpp  receipt.hpp  rlp.hpp  rpc_client.hpp  rpc_server.hpp  state.hpp  transaction.hpp  vm.hpp  vm_plugin.api.hpp  vm_plugin_loader.hpp  vm_registry.hpp  vms.hpp  wallet.hpp  zk.hpp  zk_mining_engine.hpp  zk_seeder.hpp  zk_seeder_client.hpp
src/: address.cpp  block.cpp  blockchain.cpp  bloom.cpp  dns_seed.cpp  genesis.cpp  hash.cpp  keys.cpp  miner.cpp  mpt.cpp  node.cpp  p2p_message.cpp  p2p_node.cpp  p2p_peer.cpp  receipt.cpp  rlp.cpp  rpc_server.cpp  state.cpp  transaction.cpp  vm_plugin_loader.cpp  vm_registry.cpp  wallet.cpp  zk.cpp  zk_mining_engine.cpp  zk_seader_client.cpp  zk_seeder.cpp  zk_seeder_client.cpp  zkvm_plugin.cpp
tests/: CMakeLists.txt  test_address.cpp  test_block.cpp  test_bloom.cpp  test_hash.cpp  test_keys.cpp  test_mpt.cpp  test_rlp.cpp  test_transaction.cpp
